--- a/build.yml
+++ b/build.yml
@@ -7,8 +7,7 @@ parameters:
   vmImage: 'ubuntu 16.04'
 
 jobs:
-- job: Build
-  name: $(SourceBranchName)-$(Date:yyyyMMdd)$(Rev:-r)
+- job: $(SourceBranchName)-$(Date:yyyyMMdd)$(Rev:-r)
   pool:
     vmImage: ${{ parameters.vmImage }}
   steps:
