--- a/build.yml
+++ b/build.yml
@@ -7,7 +7,7 @@ parameters:
   vmImage: 'ubuntu 16.04'
 
 jobs:
-- job: $(SourceBranchName)-$(Date:yyyyMMdd)$(Rev:-r)
+- job: Build
   pool:
     vmImage: ${{ parameters.vmImage }}
   steps:
