--- a/build.yml
+++ b/build.yml
@@ -4,14 +4,11 @@
 parameters:
   # Default values
   packageArtifacts: false
-  vmImage: 'ubuntu 16.04'
-  poolName: 
+  pool: {}
 
 jobs:
 - job: Build
-  pool:
-    vmImage: ${{ parameters.vmImage }}
-    name: ${{ parameters.poolName }}
+  pool: ${{ parameters.pool }}
   steps:
   - task: DotNetCoreInstaller@2 
     inputs:
