devops: job Publish_plugin is depend on Build

--- a/publish-plugin.yml
+++ b/publish-plugin.yml
@@ -9,6 +9,7 @@ parameters:
 jobs:
 - job: Publish_plugin
   displayName: 'Publish plugin as an Universal Package'
+  dependsOn: Build
   pool: ${{ parameters.pool }}
   steps:
   - task: DotNetCoreInstaller@2 
