use package also with version suffix

--- a/build.yml
+++ b/build.yml
@@ -32,3 +32,6 @@ jobs:
 
   - ${{ if eq(parameters.packageArtifacts, 'true') }}:
     - template: package.yml
+      parameters:
+        useVersionSuffix: ${{ parameters.useVersionSuffix }}
+        
