--- a/package.yml
+++ b/package.yml
@@ -1,13 +1,16 @@
-steps:
+parameters:
+  # Default values
+  useVersionSuffix: true
 
+steps:
   # Package nugets
-  - task: DotNetCoreCLI@2
-    displayName: Pack
-    inputs:
-      command: pack
-      configuration: '$(buildConfiguration)'
-      packDirectory: '$(Build.artifactStagingDirectory)/packages'
-      nobuild: true
+  - script: dotnet pack --no-build --configuration $(buildConfiguration) --version-suffix $(build.buildNumber) --output $(Build.artifactStagingDirectory)/packages
+    displayName: 'dotnet pack $(buildConfiguration) with version suffix'
+    condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'true'))
+
+  - script: dotnet pack --no-build --configuration $(buildConfiguration) --output $(Build.artifactStagingDirectory)/packages
+    displayName: 'dotnet pack $(buildConfiguration) with version suffix'
+    condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'false'))
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: NuGet Packages'
