--- a/package.yml
+++ b/package.yml
@@ -9,7 +9,7 @@ steps:
     condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'true'))
 
   - script: dotnet pack --no-build --configuration $(buildConfiguration) --output $(Build.artifactStagingDirectory)/packages
-    displayName: 'dotnet pack $(buildConfiguration) with version suffix'
+    displayName: 'dotnet pack $(buildConfiguration)'
     condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'false'))
 
   - task: PublishBuildArtifacts@1
