--- a/build.yml
+++ b/build.yml
@@ -15,6 +15,13 @@ jobs:
     inputs:
       version: '2.2.107' 
       
+  - task: DotNetCoreCLI@2
+    displayName: 'dotnet restore'
+    inputs:
+      command: restore
+      projects: '*.sln'
+      vstsFeed: MyGet
+      
   - script: dotnet build --configuration $(buildConfiguration) --version-suffix $(build.buildNumber) /warnaserror
     displayName: 'dotnet build $(buildConfiguration) with version suffix'
     condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'true'))
