new command is now custom

--- a/build.yml
+++ b/build.yml
@@ -18,8 +18,8 @@ jobs:
   - task: DotNetCoreCLI@2
     displayName: 'dotnet new configfile'
     inputs: 
-      command: new
-      arguments: nugetconfig
+      command: custom
+      arguments: new nugetconfig
       
   - task: NuGetCommand@2
     displayName: 'add MyGetSource'
