--- a/restore.yml
+++ b/restore.yml
@@ -1,23 +1,29 @@
+# Repo: FirelyTeam/azure-pipeline-templates
+# File: restore.yml
+
+#parameters:
 
   
 steps:
-  - task: DotNetCoreCLI@2
-    displayName: 'dotnet new configfile'
-    inputs: 
-      command: custom
-      custom: new
-      arguments: nugetconfig
+#  - task: NuGetAuthenticate@0
+#    inputs:
+#      nuGetServiceConnections: MyGetCredentials
+
+#  - task: DotNetCoreCLI@2
+#    displayName: 'dotnet new configfile'
+#    inputs: 
+#      command: custom
+#      custom: new
+#      arguments: nugetconfig
       
-  - task: NuGetCommand@2
-    displayName: 'add MyGetSource'
-    inputs: 
-      command: custom
-      arguments: sources add  -name myget -Source https://www.myget.org/F/vonk/api/v2/package -configfile .\nuget.config
+#  - task: NuGetCommand@2
+#    displayName: 'add MyGetSource'
+#    inputs: 
+#      command: custom
+#      arguments: sources add  -name myget -Source https://www.myget.org/F/vonk/api/v2/package -configfile .\nuget.config
     
   - task: DotNetCoreCLI@2
-    displayName: 'dotnet restore #4'
+    displayName: 'dotnet restore'
     inputs:
       command: restore
-      nugetConfigPath: .\nuget.config
-      feedsToUse: config
-      externalFeedCredentials: MyGet
+      externalFeedCredentials: MyGetCredentials
