--- a/build.yml
+++ b/build.yml
@@ -3,6 +3,7 @@
 
 parameters:
   # Default values
+  dotNetCoreVersion: '2.2.107' # can also be use with wildcards:  latest minor version of 3. , use '3.x'
   useVersionSuffix: true
   restoreDependencies: false
   nuGetServiceConnections: #required when restoreDependies = true
@@ -16,7 +17,7 @@ jobs:
   steps:
   - task: DotNetCoreInstaller@2 
     inputs:
-      version: '2.2.107' 
+      version: ${{ parameters.dotNetCoreVersion }} 
 
   - ${{ if eq(parameters.restoreDependencies, 'true') }}:
     - template: restore.yml
