Add check for checkoutSubmodules

--- a/build.yml
+++ b/build.yml
@@ -15,9 +15,13 @@ jobs:
 - job: Build
   pool: ${{ parameters.pool }}
   steps:
-  - task: DotNetCoreInstaller@2 
+  - task: DotNetCoreInstaller@2
     inputs:
-      version: ${{ parameters.dotNetCoreVersion }} 
+      version: ${{ parameters.dotNetCoreVersion }}
+
+  - ${{ if eq(parameters.checkoutSubmodules, 'true') }}:
+    - checkout: self
+      submodules: true
 
   - ${{ if eq(parameters.restoreDependencies, 'true') }}:
     - template: restore.yml
