Set default for checkoutSubmodules

--- a/build.yml
+++ b/build.yml
@@ -9,6 +9,7 @@ parameters:
   nuGetServiceConnections: #required when restoreDependies = true
   nuGetSources: #required when restoreDependies = true
   packageArtifacts: false
+  checkoutSubmodules: false
   pool: {}
 
 jobs:
