--- a/push-nuget-package.yml
+++ b/push-nuget-package.yml
@@ -8,12 +8,15 @@ parameters:
   skipDuplicate: false # Allow skipping duplicate packages
 
 steps:
+- powershell: |
+    if ($Env:AGENT_OS -eq "Windows_NT") {$sep = "\"} else {$sep = "/"}
+    echo "##vso[task.setvariable variable=PATH_SEPARATOR]$sep"
 - download: none
 - task: DownloadPipelineArtifact@2
   inputs:
     source: current
     artifact: ${{ parameters.artifact }}
-    path: $(Build.ArtifactStagingDirectory)\artifacts
+    path: $(Build.ArtifactStagingDirectory)$(PATH_SEPARATOR)artifacts
 - task: NuGetToolInstaller@1
   inputs:
     versionSpec: 5.x
@@ -23,7 +26,7 @@ steps:
     command: custom
     custom: nuget
     arguments: >
-      push $(Build.ArtifactStagingDirectory)\artifacts\*.nupkg
+      push $(Build.ArtifactStagingDirectory)$(PATH_SEPARATOR)artifacts$(PATH_SEPARATOR)*.nupkg
       --source ${{ parameters.source }}
       --api-key ${{ parameters.apiKey }}
     ${{ if eq(parameters.skipDuplicate, true) }}:
