--- a/build.yml
+++ b/build.yml
@@ -33,9 +33,13 @@ jobs:
         nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
         nuGetSources: ${{ parameters.nuGetSources }}
       
-  - script: dotnet build --configuration $(buildConfiguration) --version-suffix $(build.buildNumber) 
+  - script: dotnet build --configuration $(buildConfiguration) --version-suffix $(build.buildNumber) --no-restore
+    displayName: 'dotnet build $(buildConfiguration) with version suffix  and no restore'
+    condition: and(succeeded(), and(eq('${{ parameters.useVersionSuffix }}', 'true'), eq('${{ parameters.restoreDependencies }}', 'true')))
+    
+  - script: dotnet build --configuration $(buildConfiguration) --version-suffix $(build.buildNumber)
     displayName: 'dotnet build $(buildConfiguration) with version suffix'
-    condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'true'))
+    condition: and(succeeded(), and(eq('${{ parameters.useVersionSuffix }}', 'true'), eq('${{ parameters.restoreDependencies }}', 'false')))
 
   - script: dotnet build --configuration $(buildConfiguration) 
     displayName: 'dotnet build $(buildConfiguration)'
