--- a/build.yml
+++ b/build.yml
@@ -50,7 +50,7 @@ jobs:
     inputs:
       command: test
       projects: '**/*Tests/*Tests.csproj'
-      arguments: '--configuration $(buildConfiguration) --no-restore'
+      arguments: '--configuration $(buildConfiguration) --no-build --no-restore'
 
   - ${{ if eq(parameters.packageArtifacts, 'true') }}:
     - template: package.yml
