--- a/publish-plugin.yml
+++ b/publish-plugin.yml
@@ -4,6 +4,9 @@
 parameters:
   pool: {}
   useVersionSuffix: true
+  restoreDependencies: false
+  nuGetServiceConnections: #required when restoreDependies = true
+  nuGetSources: #required when restoreDependies = true
   dotNetCoreVersion: '3.1.102' # can also be use with wildcards:  latest minor version of 3. , use '3.x'
   
 jobs:
@@ -15,6 +18,12 @@ jobs:
   - task: DotNetCoreInstaller@2 
     inputs:
       version: ${{ parameters.dotNetCoreVersion }} 
+
+  - ${{ if eq(parameters.restoreDependencies, 'true') }}:
+    - template: restore.yml
+      parameters:
+        nuGetServiceConnections: ${{ parameters.nuGetServiceConnections }}
+        nuGetSources: ${{ parameters.nuGetSources }}
 
   - task: DotNetCoreCLI@2
     displayName: 'dotnet publish with version suffix'
