--- a/build.yml
+++ b/build.yml
@@ -41,9 +41,13 @@ jobs:
     displayName: 'dotnet build $(buildConfiguration) with version suffix'
     condition: and(succeeded(), and(eq('${{ parameters.useVersionSuffix }}', 'true'), eq('${{ parameters.restoreDependencies }}', 'false')))
 
-  - script: dotnet build --configuration $(buildConfiguration) 
+  - script: dotnet build --configuration $(buildConfiguration) --no-restore
+    displayName: 'dotnet build $(buildConfiguration) with no restore'
+    condition: and(succeeded(), and(eq('${{ parameters.useVersionSuffix }}', 'flase'), eq('${{ parameters.restoreDependencies }}', 'true')))
+    
+  - script: dotnet build --configuration $(buildConfiguration)
     displayName: 'dotnet build $(buildConfiguration)'
-    condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'false'))
+    condition: and(succeeded(), and(eq('${{ parameters.useVersionSuffix }}', 'false'), eq('${{ parameters.restoreDependencies }}', 'false')))
 
   - task: DotNetCoreCLI@2
     displayName: 'dotnet test UnitTests'
