--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,7 @@
 parameters:
   # Default values
   useVersionSuffix: true
+  artifactName: 'NuGetPackages'
 
 steps:
   # Package nugets
@@ -13,7 +14,7 @@ steps:
     condition: and(succeeded(), eq('${{ parameters.useVersionSuffix }}', 'false'))
 
   - task: PublishBuildArtifacts@1
-    displayName: 'Publish Artifact: NuGet Packages'
+    displayName: 'Publish Artifact'
     inputs:
       pathtoPublish: '$(Build.artifactStagingDirectory)/packages'
-      artifactName: 'NuGet Packages'
+      artifactName: ${{ parameters.artifactName }}
