--- a/deploy-plugin-package.yml
+++ b/deploy-plugin-package.yml
@@ -7,6 +7,7 @@ parameters:
   environment: 'plugin-deploy'
   name: 'Deploy_plugin_package'
   displayName: 'Deploy plugin as an NuGet Package'
+  packageArtifactName: 'NuGetPackages'
   
 
 jobs:
@@ -20,7 +21,7 @@ jobs:
           steps:
           - task: DownloadBuildArtifacts@0
             inputs:
-              artifactName: 'NuGet Packages'
+              artifactName: ${{ parameters.packageArtifactName }}
               downloadPath: '$(System.ArtifactsDirectory)/NuGetArtifacts'
 
 
@@ -28,7 +29,7 @@ jobs:
             displayName: 'MyGet push'
             inputs:
                 command: push
-                packagesToPush: '$(System.ArtifactsDirectory)/NuGetArtifacts/NuGet Packages/*.nupkg'
+                packagesToPush: '$(System.ArtifactsDirectory)/NuGetArtifacts/${{ parameters.packageArtifactName }}/*.nupkg'
                 nuGetFeedType: external
                 publishFeedCredentials: ${{ parameters.nugetcredentials }}
                 verbosityPush: Normal  
