--- a/scanDockerImage.yml
+++ b/scanDockerImage.yml
@@ -25,7 +25,7 @@ jobs:
   displayName: Scan Docker image for vulnerabilities
   dependsOn: createDockerImage
   steps:
-  - checkout: none
+  - checkout: self
   - task: Docker@2
     displayName: Login to ACR
     inputs:
