--- a/scanBinaries.yml
+++ b/scanBinaries.yml
@@ -26,9 +26,9 @@ stages:
       displayName: Extract  ${{ parameters.zipFile }}      
       inputs:
         archiveFilePatterns: ${{ parameters.zipFile }}   
-        destinationFolder: ${{ parameters.directory }}   
+        destinationFolder: $(directory)   
         cleanDestinationFolder: true
         overwriteExistingFiles: false
     - script: | 
-        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v /tmp:/tmp -v ${{ parameters.directory }}:/src  aquasec/trivy:latest  --exit-code 1 --format table --scanners vuln,config,secret filesystem /src
+        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v /tmp:/tmp -v $(directory):/src  aquasec/trivy:latest  --exit-code 1 --format table --scanners vuln,config,secret filesystem /src
       displayName: Scan compiled code with Trivy
