--- a/scanBinaries.yml
+++ b/scanBinaries.yml
@@ -2,10 +2,6 @@ parameters:
   artifactName:  # name of the artifact on Azure DevOps that contains the Zip file                         
   zipfile: # name or pattern of the zipfile to be extracted and scanned
 
-variables:
-- name: directory
-  value: $(System.DefaultWorkingDirectory)/Binaries
-
 stages:
 - stage: scanBinaries
   displayName: Scan vulnerabilities
@@ -26,9 +22,9 @@ stages:
       displayName: Extract  ${{ parameters.zipFile }}      
       inputs:
         archiveFilePatterns: ${{ parameters.zipFile }}   
-        destinationFolder: $(directory)   
+        destinationFolder: $(System.DefaultWorkingDirectory)/Binaries   
         cleanDestinationFolder: true
         overwriteExistingFiles: false
     - script: | 
-        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v /tmp:/tmp -v $(directory):/src  aquasec/trivy:latest  --exit-code 1 --format table --scanners vuln,config,secret filesystem /src
+        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock -v /tmp:/tmp -v $(System.DefaultWorkingDirectory)/Binaries:/src  aquasec/trivy:latest  --exit-code 1 --format table --scanners vuln,config,secret filesystem /src
       displayName: Scan compiled code with Trivy
